<resources>
    <string name="app_name">Hello</string>
    <string name="bottom_1">constraint layout</string>
    <string name="bottom_2">login</string>
    <string name="bottom_3">pick contact</string>
    <string name="bottom_4">fragment</string>
    <string name="bottom_5">recycler view</string>
    <string name="bottom_6">thread</string>
    <string name="bottom_7">handler</string>
    <string name="bottom_8">rxjava</string>
    <string name="bottom_9">shared preferences</string>
    <string name="bottom_10">blogging</string>
    <string name="practice">Android Practice</string>
    <string name="hello_github">Hello!</string>
    <string name="github" translatable="false">github</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="aware_icon_desp" translatable="false">aware icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="or_connect">or connect with</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="email_signup">Sign Up with E-mail</string>
    <string name="android">Android</string>
    <string name="java" translatable="false">Java</string>
    <string name="android_content">"Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. "</string>
    <string name="java_content">"Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible. "</string>
    <string name="tweet_head_image" translatable="false">tweet head image</string>
    <string name="footer_hint">The END</string>
    <string name="thread" translatable="false">Thread</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="rxjava" translatable="false">rxjava</string>
    <string name="i_know">I know</string>
    <string name="hint_info">Info：\n Click "I know" no longer prompts</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="tweet_image" translatable="false">tweet images</string>
    <string name="default_comment" translatable="false">default</string>
    <string name="moment_background">moment background</string>
    <string name="user_profile_image">user profile image</string>
    <string name="refresh_image">refresh image</string>

</resources>