<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/aware_icon"
            android:layout_width="148.9dp"
            android:layout_height="30.3dp"
            android:src="@drawable/fill_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="88dp"
            android:contentDescription="@string/aware_icon_desp" />

    <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="196dp"
            android:textSize="12sp"
            android:textColor="@color/login_edit_text_color"
            android:paddingHorizontal="10dp"
            android:background="@drawable/login_edit_shape"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:inputType="textPersonName" />

    <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/login_edit_text_color"
            android:paddingHorizontal="10dp"
            android:background="@drawable/login_edit_shape"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkout_box_shape" />

    <TextView
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            android:layout_marginTop="22.5dp"
            android:layout_marginStart="30dp"
            android:text="@string/remember_me"
            android:textColor="#222222"
            android:textSize="12sp"
            android:textStyle="normal" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toEndOf="@id/remember"
            android:layout_marginTop="22.5dp"
            android:layout_marginStart="37.5dp"
            android:text="@string/forget_password"
            android:textColor="#222222"
            android:textSize="12sp"
            android:textStyle="normal" />

    <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/remember"
            android:layout_marginTop="22.5dp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:background="@drawable/login_button_shape"
            android:textColor="@color/white"
            android:textSize="12sp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>