<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/button_1"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_1"
            android:paddingVertical="10dp"
            android:layout_marginVertical="5dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray" />

    <Button
            android:id="@+id/button_2"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginVertical="5dp"
            android:text="@string/bottom_2"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray" />

    <Button
            android:id="@+id/button_3"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:paddingVertical="10dp"
            android:layout_marginVertical="5dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_3"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray" />


</LinearLayout>